change cars_by_make_model to category_items

--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -40,6 +40,7 @@
         
           <div>
             <a href="url_for('cars_by_make_model', category_id=item.id)}}">{{item.category_pic}}</a>
+            <br>
             <a class="btn btn-primary" href="url_for('cars_by_make_model', category_id=item.id)}}">{{item.category}}</a>
           </div>
           
@@ -71,6 +72,9 @@
         </div>
         <div class="col-md-5">
           <h3>{{garage.name}}</h3>
+          <br>
+          <p>{{garage.description}}</p>
+          <br>
           
           <a class="btn btn-primary" href="{{url_for('cars_by_make_model', category_id=item.id) }}">Search!</a>
         </div>
