--- a/templates/specific_car.html
+++ b/templates/specific_car.html
@@ -14,23 +14,23 @@
       
 
       <div class="row">
-        <div class="col-md-7" id="b_pic">
+        <div class="col-md-7">
           <a href="#">
             <img class="#" src="http://placehold.it/600x300" alt="">
           </a>
         </div>
-        <div class="col-md-5" id="b_txt">
+        <div class="col-md-5">
           <h3><span>{{car.year}}</span><span>{{car.make}}</span><span>{{car.model}}</span></h3>
           <br>
           <h3>{{car.price}}</h3>
           <br>
           <p>{{car.description}}</p>
           
-          <a class="btn btn-primary" href="#">Buy!</a>
+          <a class="btn btn-primary" href="{{url_for('purchase_from_category', category_id=category.id, car_id=car.id)}}">Contact Seller</a>
           <br>
-          <a class="btn btn-primary" href="{{url_for('')}}">Edit</a>
+          <a class="btn btn-primary" href="{{url_for('edit_car_category', category_id=category.id, car_id=car.id)}}">Edit</a>
           <br>
-          <a class="brn btn-primary" href="">Delete</a>
+          <a class="brn btn-primary" href="{{url_for('delete_car_category', category_id=category.id, car_id=car.id)}}">Delete</a>
         </div>
       </div>
       <!-- /.row -->
