--- a/templates/category_purchase_confirm.html
+++ b/templates/category_purchase_confirm.html
@@ -28,7 +28,7 @@
           <a class="btn btn-primary" href="{{url_for('category')}}">Return to Home Page</a>
           <br>
 
-          <a class="btn btn-primary" href="{{url_for('category_items', category_id=category.id)}}">Return to {{category.name}}</a>
+          <a class="btn btn-primary" href="{{url_for('category_items', category_id=category.id)}}">Return to {{category.category}}</a>
 
         </div>
       </div>
