--- a/templates/category_items.html
+++ b/templates/category_items.html
@@ -6,17 +6,22 @@
     <div class="container">
 
       <!-- Page Heading -->
-      <h1 class="my-4">Joe's Car Lot
-        <small>Category:  {{category.category}}</small>
-      </h1>
+      <h1 class="my-4">Joe's Car Lot</h1>
+        <br>
+        <h3></h3><small>Category:  {{category.category}}</small>
+      </h3>
       <br>
+      <a href="{{url_for('create_car_category', category_id=category.id)}}">Click Here to Enter and Sell Your Vehicle</a>
+      <br>
+      <br>
+      <a href="{{url_for('category')}}">Cancel</a>
       
       {%for car in cars%}
 
       <div class="row">
         <div class="col-md-7">
           <a href="#">
-            <img class="#" src="http://placehold.it/600x300" alt="">
+            <img class="#" src="{{car.car_item_pic}}" alt="">
           </a>
         </div>
         <div class="col-md-5">
@@ -25,8 +30,10 @@
           <h3>{{car.price}}</h3>
           <br>
           <p>{{car.description}}</p>
+          <br>
+          <p>{{car.car_item_pic}}</p>
 
-          <a {% if car.garage_id %} href="{{url_for('specific_car_garage', garage_id=garage.id, car_id=car.id)}}" {%else%} href="{{url_for('specific_car_category', category_id=category.id, car_id=car.id)}}" {%endif%}></a>
+          <a {% if car.garage_id %} href="{{url_for('specific_car_garage', garage_id=car.garage_id, car_id=car.id)}}" {%else%} href="{{url_for('specific_car_category', category_id=category.id, car_id=car.id)}}" {%endif%}>Get Details</a>
           
         </div>
       </div>
