--- a/templates/category_purchase.html
+++ b/templates/category_purchase.html
@@ -6,7 +6,7 @@
     <div class="container">
 
       <!-- Page Heading -->
-      <h1 class="my-4">Joe's Car Lot
+      <h1 class="my-4">Joe's Car Lot</h1>
         <br>
         <br>
         <a href="{{url_for('specific_car_category', category_id=category.id, car_id=car.id)}}">
@@ -18,7 +18,7 @@
       <div class="row">
         <div class="col-md-7">
           <a href="#">
-            <img class="#" src="http://placehold.it/600x300" alt="">
+            <img class="#" src="{{car.car_item_pic}}" alt="">
           </a>
         </div>
         <div class="col-md-5">
@@ -30,6 +30,7 @@
           <br>
           <h3>From Seller: {{user.name}}</h3>
           <br>
+          <p>{{car.car_item_pic}}</p>
           </div>
       </div>
       <div class="row">
