--- a/templates/create_garage.html
+++ b/templates/create_garage.html
@@ -7,7 +7,7 @@
   </div>
   <div class="row banner menu">
     <div class="col-md-11 col-md-offset-1 padding-none">
-      <h1>Create Your Very Own Garage</h1>
+      <h1>Create Your Garage</h1>
     </div>
   </div>
   <div class="row">
@@ -23,12 +23,13 @@
           <button type="submit" class="btn btn-default" id="submit" type="submit">
           <span class="glyphicon glyphicon-glass" aria-hidden="true"></span>Create</button>
           <br>
-          <a href = "{{url_for('category')}}">
+          
+        </div>
+      </form>
+      <a href = "{{url_for('category')}}">
             <button class="btn btn-default delete">
             <span class="glyphicon glyphicon-remove" aria-hidden="true"></span> Cancel</button>
           </a>
-        </div>
-      </form>
     </div>
   </div>
 {% endblock %}
