--- a/templates/garage_items.html
+++ b/templates/garage_items.html
@@ -13,24 +13,34 @@
       <h3>Garage Owner:  {{user.name}}</h3>
       <br>
       <a href="{{url_for('create_car_garage', garage_id=garage.id)}}">Enter and Sell a Vehicle</a>
+      <br>
+      <br>
+      <a href="{{url_for('category')}}">
+              <button class="btn btn-default delete">
+              <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>Return</button>
+              </a>
 
       {%for car in cars%}
 
       <div class="row">
         <div class="col-md-7">
           <a href="#">
-            <img class="#" src="http://placehold.it/600x300" alt="">
+            <img class="#" src="{{car.car_item_pic}}" alt="">
           </a>
         </div>
         <div class="col-md-5">
+
           <h3><span> {{car.year}} </span><span> {{car.make}} </span><span> {{car.model}} </span></h3>
           <br>
           <h3>{{car.price}}</h3>
           <br>
           <p>{{car.description}}</p>
+          <br>
+          <p>{{car.car_item_pic}}</p>
+          
 
           
-          <a class="btn btn-primary" href="url_for('purchase_from_garage', garage_id=garage.id, car_id=car.id ">Contact Seller</a>
+          <a class="btn btn-primary" href="{{url_for('specific_car_garage', garage_id=garage.id, car_id=car.id)}}">Details</a>
         </div>
       </div>
       <!-- /.row -->
