--- a/templates/garage_purchase.html
+++ b/templates/garage_purchase.html
@@ -12,7 +12,7 @@
       <div class="row">
         <div class="col-md-7">
           <a href="#">
-            <img class="#" src="http://placehold.it/600x300" alt="">
+            <img class="#" src="{{car.car_item_pic}}}" alt="">
           </a>
         </div>
         <div class="col-md-5">
@@ -24,6 +24,7 @@
           <br>
           <h3>From Seller: {{user.name}}</h3>
           <br>
+          <p>{{car.car_item_pic}}</p>
         </div>
       </div>
       <div class="row">
