--- a/templates/garage_purchase_confirm.html
+++ b/templates/garage_purchase_confirm.html
@@ -12,7 +12,7 @@
       <div class="row">
         <div class="col-md-7">
           <a href="#">
-            <img class="#" src="http://placehold.it/600x300" alt="">
+            <img class="#" src="{{car.car_item_pic}}" alt="">
           </a>
         </div>
         <div class="col-md-5">
