--- a/templates/newCarCategory.html
+++ b/templates/newCarCategory.html
@@ -29,6 +29,9 @@
           <label for="description">Description:</label>
           <textarea class="form-control" maxlength="250" rows="3" name="description" placeholder="Description of the Vehicle"></textarea>
 
+          <label for="year">Insert Vehicle Picture URL: </label>
+          <input type ="text" maxlength="250" class="form-control" name="car_pic" placeholder="Picture">
+
           <label for="price">Price:</label>
           <div class="input-group">
             <div class="input-group-addon">$</div>
@@ -94,8 +97,16 @@
           
           <button type="submit" class="btn btn-default" id="submit" type="submit">
           <span class="glyphicon glyphicon-glass" aria-hidden="true"></span>Create</button>
+          <br>
+          
         </div>
       </form>
+
+      
+      <a href="{{url_for('category_items', category_id=category.id)}}">
+              <button class="btn btn-default delete">
+              <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>Cancel</button>
+              </a>
     </div>
   </div>
 {% endblock %}
