--- a/templates/newCarGarage.html
+++ b/templates/newCarGarage.html
@@ -94,6 +94,11 @@
           
           <button type="submit" class="btn btn-default" id="submit" type="submit">
           <span class="glyphicon glyphicon-glass" aria-hidden="true"></span>Create</button>
+          <br>
+          <a href = "{{url_for('garage_items', garage_id=garage.id)}}">
+            <button class="btn btn-default delete">
+            <span class="glyphicon glyphicon-remove" aria-hidden="true"></span> Cancel</button>
+          </a>
         </div>
       </form>
     </div>
