--- a/templates/public_category_items.html
+++ b/templates/public_category_items.html
@@ -19,7 +19,7 @@
       <div class="row">
         <div class="col-md-7">
           <a href="#">
-            <img class="#" src="http://placehold.it/600x300" alt="">
+            <img class="#" src="{{category.category_pic}}" alt="">
           </a>
         </div>
         <div class="col-md-5">
