--- a/templates/public_specific_car_category.html
+++ b/templates/public_specific_car_category.html
@@ -8,7 +8,7 @@
       <!-- Page Heading -->
       <h1 class="my-4">Joe's Car Lot</h1>
       <br>
-        <h3><small>category.category</small>
+        <h3><small>{{category.category}}</small>
       </h3>
 
       
@@ -17,7 +17,7 @@
       <div class="row">
         <div class="col-md-7">
           <a href="#">
-            <img class="#" src="http://placehold.it/600x300" alt="">
+            <img class="#" src="{{car.car_item_pic}}" alt="">
           </a>
         </div>
         <div class="col-md-5">
@@ -28,6 +28,8 @@
           <h3>{{car.color}}</h3>
           <br>
           <p>{{car.description}}</p>
+          <br>
+          <p>{{car.car_item_pic}}</p>
           
           <a class="btn btn-primary" href="{{url_for('purchase_from_category', category_id=category.id, car_id=car.id)}}">Contact Seller</a>
           <br>
