--- a/templates/purchase.html
+++ b/templates/purchase.html
@@ -24,7 +24,7 @@
           <br>
           <h3>From Seller: {{user.name}}</h3>
           <br>
-          <form action="{{url_for('purchase_confirm', garage_id=category.id)}}" method = "post">
+          <form action="{{url_for('category_purchase_confirm', category_id=category.id)}}" method = "post">
             <div class="form-group">
             <label for="name">Your Name:</label>
             <input type ="text" maxlength="150" name="name" placeholder="Name">
