--- a/templates/specific_car_category.html
+++ b/templates/specific_car_category.html
@@ -7,9 +7,8 @@
 
       <!-- Page Heading -->
       <h1 class="my-4">Joe's Car Lot
-        <small>{{garage.name}}</small>
+        <small>{{category.category}}</small>
       </h1>
-
 
       
       
@@ -21,24 +20,23 @@
           </a>
         </div>
         <div class="col-md-5">
-          <h3><span> {{car.year}} </span><span> {{car.make}} </span><span> {{car.model}} </span></h3>
+          <h3><span>{{car.year}} </span><span> {{car.make}} </span><span> {{car.model}}</span></h3>
           <br>
-          <h3>Price: {{car.price}}</h3>
+          <h3>{{car.price}}</h3>
           <br>
-          <h3>Color: {{car.color}}</h3>
+          <h3>{{car.color}}</h3>
           <br>
-          <p>Description: {{car.description}}</p>
+          <p>{{car.description}}</p>
           <br>
           <p>{{car.car_item_pic}}</p>
           
-          
-          <a class="btn btn-primary" href="{{url_for('purchase_from_garage', garage_id=garage.id, car_id=car.id)}}">Contact Seller</a>
+          <a class="btn btn-primary" href="{{url_for('purchase_from_category', category_id=category.id, car_id=car.id)}}">Contact Seller</a>
           <br>
-          <a class="btn btn-primary" href="{{url_for('edit_car_garage', garage_id=garage.id, car_id=car.id)}}">Edit</a>
+          <a class="btn btn-primary" href="{{url_for('edit_car_category', category_id=category.id, car_id=car.id)}}">Edit</a>
           <br>
-          <a class="brn btn-primary" href="{{url_for('delete_car_garage', garage_id=garage.id, car_id=car.id)}}">Delete</a>
+          <a class="brn btn-primary" href="{{url_for('delete_car_category', category_id=category.id, car_id=car.id)}}">Delete</a>
           <br>
-          <a href="{{url_for('garage_items', garage_id=garage.id)}}">
+          <a href="{{url_for('category_items', category_id=category.id)}}">
               <button class="btn btn-default delete">
               <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>Return</button>
               </a>
@@ -47,7 +45,7 @@
       <!-- /.row -->
 
       <hr>
-     
+      
       
 
     </div>
