--- a/templates/garage_purchase_confirm.html
+++ b/templates/garage_purchase_confirm.html
@@ -6,7 +6,7 @@
     <div class="container">
 
       <!-- Page Heading -->
-      <h1 class="my-4">Joe's Car Lot
+      <h1 class="my-4">Joe's Car Lot</h1>
     
 
       <div class="row">
@@ -19,12 +19,6 @@
           <h3>Thank you</h3>
           <br>
           <h3>Your message has been sent.  The Seller will contact you soon! </h3>
-
-          
-          
-          
-
-          
           <a class="btn btn-primary" href="{{url_for('category')}}">Return to Home Page</a>
           <br>
           <a class="btn btn-primary" href="{{url_for('garage_items', garage_id=garage.id)}}">Return to {{garage.name}}</a>
