--- a/templates/public_category_items.html
+++ b/templates/public_category_items.html
@@ -12,7 +12,7 @@
       </h3>
       <br>
       
-      <a href="{{url_for('category')}}">Cancel</a>
+      <a href="{{url_for('category')}}">Return</a>
       
       {%for car in cars%}
 
