--- a/templates/create_garage.html
+++ b/templates/create_garage.html
@@ -12,7 +12,7 @@
   </div>
   <div class="row">
     <div class="col-md-6 col-md-offset-1 padding-top">
-      <form action="{{url_for('create_garage')}}" method = "post">
+      <form action="{{url_for('create_garage')}}" method = "POST">
         <div class="form-group">
           <label for="year">Garage Name </label>
           <input type ="text" maxlength="50" class="form-control" name="name" placeholder="Garage Name">
