--- a/templates/main.html
+++ b/templates/main.html
@@ -49,6 +49,15 @@
         </div>
       </li>
     </ul>
+    <div class = "text-right">
+    {%if 'username' not in session%}
+    <a href="{{url_for('showLogin')}}">Click Here to Log in</a>
+    {%else%}
+    <a href="{{url_for('disconnect')}}">Logout</a>
+    {%endif%}
+    
+
+  </div>
   </div>
 </div>
 </nav>
