--- a/templates/public_index.html
+++ b/templates/public_index.html
@@ -5,14 +5,6 @@
         <!-- Page Content -->
     <div class="container">
 
-      <!-- Page Heading -->
-      <h1 class="my-4">Joe's Car Lot</h1>
-      <br>
-      <br>
-      <h3>Search By Bodystyle</h3>
-      <br>
-      <br>
-         
 
       <div class="flash">
 
@@ -35,11 +27,6 @@
 
       </div>
 
-      
-      <div class = row>
-
-
-        
         {%for category in categories%}
         
           <div class="row">
@@ -49,23 +36,17 @@
           </a>
         </div>
         <div class="col-md-5">
-          <h3>{{category.category}}</h3>
+          <div id="text_title"><h3>{{category.category}}</h3></div>
           
           
-          <a class="btn btn-primary" href="{{url_for('category_items', category_id=category.id) }}">Search This BodyStyle!</a>
+          <div id="text_button"><a class="btn btn-primary" href="{{url_for('category_items', category_id=category.id) }}">Search This BodyStyle!</a></div>
         </div>
       </div>
       <br>
       <br>
           
-          
         {%endfor%}
-        
-          
 
-
-
-      </div>
       <div>
         <br>
         <h2>Garages: </h2>
@@ -96,9 +77,9 @@
           </a>
         </div>
         <div class="col-md-5">
-          <h3>{{garage.name}}</h3>
+          <div><h3>{{garage.name}}</h3></div>
           <br>
-          <p>{{garage.description}}</p>
+          <div><p>{{garage.description}}</p></div>
           <br>
           
           <a class="btn btn-primary" href="{{url_for('garage_items', garage_id=garage.id) }}">Enter Garage!</a>
