--- a/templates/main.html
+++ b/templates/main.html
@@ -9,12 +9,12 @@
     <meta name="author" content="">
 
     <title>Joe's Used Car Lot</title>
-
+    
     <!-- Bootstrap core CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/css/bootstrap.min.css" integrity="sha384-Zug+QiDoJOrZ5t4lssLdxGhVrurbmBWopoEl+M6BdEfwnCJZtKxi1KgxUyJq13dy" crossorigin="anonymous">
 
     <!-- Custom styles for this template -->
-    <!--<link href="static/styles.css" rel="stylesheet">-->
+    <link rel="stylesheet" type="text/css" href="static/styles.css">
 
   </head>
 	<body>
@@ -28,7 +28,7 @@
   <div class="collapse navbar-collapse" id="navbarNavDropdown">
     <ul class="navbar-nav">
       <li class="nav-item active">
-        <a class="nav-link" href="#">About Us <span class="sr-only">(current)</span></a>
+        <a class="nav-link" href="#" id="text_title">About Us <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -49,7 +49,7 @@
         </div>
       </li>
     </ul>
-    <div class = "text-right">
+    <div class="nav-link">
     {%if 'username' not in session%}
     <a href="{{url_for('showLogin')}}">Click Here to Log in</a>
     {%else%}
@@ -61,10 +61,6 @@
   </div>
 </div>
 </nav>
-<br>
-<br>
-<br>
-		
 		{%block content%}
 		{%endblock%}
 
