--- a/templates/main.html
+++ b/templates/main.html
@@ -49,7 +49,7 @@
         </div>
       </li>
     </ul>
-    <div class="nav-link">
+    <div class="login_link">
     {%if 'username' not in session%}
     <a href="{{url_for('showLogin')}}">Click Here to Log in</a>
     {%else%}
